src/test/resources/typeSystemTestModels/valid/methods/MethodOverride.java
package typeSystemTestModels.valid.methods;

public class MethodOverride extends Methods {

  @Override
  public void publicMethod() {
  }
  
  @Override
  protected void protectedMethod() {
  }
  
  private void privateMethod() {
  }
  
  @Override
  void defaultMethod() {
  }
}
