src/test/resources/typeSystemTestModels/invalid/classes/ClassNoModifierDuplicate.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.classes;

public public class ClassNoModifierDuplicate {

}
